--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Freshnesecom</title>
+    <link rel="stylesheet" href="./slick/slick/slick.css">
+    <link rel="stylesheet" href="./slick/slick/slick-theme.css">
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/styles.css">
-    <link rel="stylesheet" href="./bootstrap/bootstrap/css/bootstrap.min.css">
 </head>
 
 <body>
@@ -66,7 +68,10 @@
     <!-- Site Footer Finish -->
 
     <!-- Site Script Sourse -->
-    <script src="./bootstrap/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
+    <script src="./slick/script.js" type="text/javascript" charset="utf-8"></script>
+    <script src="./slick/slick/slick.js" type="text/javascript" charset="utf-8"></script>
+    <script src="./js/bootstrap.bundle.min.js"></script>
     <script src="./js/app.js"></script>
 
 </body>
