--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exem</title>
+    <title>Digital Agancy</title>
     <link rel="stylesheet" href="./slick/slick/slick.css">
     <link rel="stylesheet" href="./slick/slick/slick-theme.css">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
@@ -17,16 +17,30 @@
     <!-- Site Header Start -->
     <header class="header">
         <div class="container">
-            <a href="./index.html" class="header__logo">
-                <img src="./images/" alt="Site Logo">
-            </a>
-            <nav class="nav">
-                <ul class="nav__list">
-                    <li class="nav__item">
-                        <a href="./index.html">Home</a>
-                    </li>
-                </ul>
-            </nav>
+            <div class="header-top">
+                
+            </div>
+            <div class="header-bottom">
+                <a href="./index.html" class="header__logo">
+                    <img src="./images/footer-logo.svg" alt="Site Logo">
+                </a>
+                <nav class="nav">
+                    <ul class="nav__list">
+                        <li class="nav__item">
+                            <a class="nav__link text-white" href="./index.html">Home</a>
+                        </li>
+                        <li class="nav__item">
+                            <a class="nav__link text-white" href="./index.html">About us</a>
+                        </li>
+                        <li class="nav__item">
+                            <a class="nav__link text-white" href="./index.html">Services</a>
+                        </li>
+                        <li class="nav__item">
+                            <a class="nav__link text-white" href="./index.html">News</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
             <button type="button" class="header__btn">
                 <img src="./images/" alt="Site Header Logo">
             </button>
