--- a/index.html
+++ b/index.html
@@ -16,36 +16,51 @@
 
     <!-- Site Header Start -->
     <header class="header">
-        <div class="container">
+        <div class="header__wrapper">
             <div class="header-top">
-                
-            </div>
-            <div class="header-bottom">
-                <a href="./index.html" class="header__logo">
-                    <img src="./images/footer-logo.svg" alt="Site Logo">
-                </a>
-                <nav class="nav">
-                    <ul class="nav__list">
-                        <li class="nav__item">
-                            <a class="nav__link text-white" href="./index.html">Home</a>
+                <div class="container">
+                    <ul class="d-flex justify-content-end list-unstyled m-0">
+                        <li class="header-top-item">
+                            <a href="https://goo.gl/maps/M8howjG5yjszU2wh9" target="blank" class="header-top-link">Company Address type here</a>
                         </li>
-                        <li class="nav__item">
-                            <a class="nav__link text-white" href="./index.html">About us</a>
-                        </li>
-                        <li class="nav__item">
-                            <a class="nav__link text-white" href="./index.html">Services</a>
-                        </li>
-                        <li class="nav__item">
-                            <a class="nav__link text-white" href="./index.html">News</a>
+                        <li class="header-top-item">
+                            <a href="tel:+9400000000" class="header-top-link">+94 000 00000</a>
                         </li>
                     </ul>
-                </nav>
+                </div>
             </div>
-            <button type="button" class="header__btn">
-                <img src="./images/" alt="Site Header Logo">
-            </button>
+            <div class="header-bottom">
+                <div class="container">
+                    <div class="row d-flex justify-content-between align-items-center">
+                        <a href="./index.html" class="header__logo col-2 m-0 p-0 d-inline-block">
+                            <img src="./images/footer-logo.svg" alt="Site Logo">
+                        </a>
+                        <nav class="col-8 justify-content-end">
+                            <ul class="nav  justify-content-end">
+                                <li class="nav-item">
+                                    <a class="nav-link text-white" href="#">Home</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-white" href="#">About us</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-white" href="#">Services</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-white" href="#">News</a>
+                                </li>
+                                <button type="button" class="bg-light btn nav-btn">Contact us</button>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+                <button type="button" class="header__btn d-none">
+                    <img src="./images/" alt="Site Header Logo">
+                </button>
+            </div>
         </div>
     </header>
+    </div>
     <!-- Site Header Finish -->
 
     <!-- Site Main Start -->
