--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
                 <div class="container">
                     <ul class="d-flex justify-content-end list-unstyled m-0">
                         <li class="header-top-item">
-                            <a href="https://goo.gl/maps/M8howjG5yjszU2wh9" target="blank" class="header-top-link">Company Address type here</a>
+                            <a href="https://goo.gl/maps/M8howjG5yjszU2wh9" target="blank"
+                                class="header-top-link">Company Address type here</a>
                         </li>
                         <li class="header-top-item">
                             <a href="tel:+9400000000" class="header-top-link">+94 000 00000</a>
@@ -68,17 +69,46 @@
         <!-- Site Hero Start -->
         <section class="hero">
             <div class="container">
-                <div class="header__wrapper">
-
+                <div class="hero__wrapper">
+                    <h3 class="hero-heading">Digital Marketing</h3>
+                    <h1 class="hero__title">Work that we produce for our clients</h1>
+                    <p class="hero__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                        Lorem Ipsum has been the industry's standard.</p>
+                    <button type="button" class="btn hero-btn text-white">Get more details</button>
                 </div>
             </div>
         </section>
         <!-- Site Hero Finish -->
+        <!-- Develop Start -->
+        <section class="develop">
+            <div class="container">
+                <div class="develop__wrapper">
+                    <div class="d-flex justify-content-center">
+                        <h2 class="develop-title">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting
+                            industry.
+                        </h2>
+                    </div>
+                    <div class="develop-top-box">
+                        <h3 class="develop-top-title">
+                            Lorem Ipsum
+                        </h3>
+                        <p class="develop-top-text">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                        </p>
+                    </div>
+                    <div class="develop-box">
+                        <img src="./images/devices-bg.png" srcset="./images/devices-bg.png 1x, ./images/devices-bg@2x.png 2x" alt="Devices bg">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Develop Finish -->
     </main>
     <!-- Site Main Finish -->
 
     <!-- Site Footer Start -->
-    <footer class="footer">
+    <!--  <footer class="footer">
         <div class="container">
             <div class="footer__wrapper">
                 <a href="./index.html" class="footer__logo">
@@ -93,7 +123,7 @@
                 </nav>
             </div>
         </div>
-    </footer>
+    </footer> -->
     <!-- Site Footer Finish -->
 
     <!-- Site Script Sourse -->
