--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </section>
         <!-- Site Hero Finish -->
         <!-- Develop Start -->
-        <!-- <section class="develop">
+        <section class="develop">
             <div class="container">
                 <div class="develop__wrapper">
                     <div class="d-flex justify-content-center">
@@ -103,7 +103,7 @@
                     </div>
                 </div>
             </div>
-        </section> -->
+        </section>
         <!-- Develop Finish -->
         <!-- <section class="devices">
             <div class="deveices__wrapper">
