--- a/index.html
+++ b/index.html
@@ -83,10 +83,12 @@
             <div class="container">
                 <div class="develop__wrapper">
                     <div class="d-flex justify-content-center">
-                        <h2 class="develop-title">
-                            Lorem Ipsum is simply dummy text of the printing and typesetting
-                            industry.
-                        </h2>
+                        <div class="develop-title-box">
+                            <h2 class="develop-title">
+                                Lorem Ipsum is simply dummy text of the printing and typesetting
+                                industry.
+                            </h2>
+                        </div>
                     </div> 
                     <div class="develop-top-box">
                         <h3 class="develop-top-title">
@@ -98,7 +100,7 @@
                         </p>
                     </div>
                     <div class="develop-box">
-                        <img src="./images/devices-bg.png"
+                        <img class="develop-box-img img-fluid" src="./images/devices-bg.png"
                         srcset="./images/devices-bg.png 1x, ./images/devices-bg@2x.png 2x" alt="Devices bg">
                     </div>
                 </div>
