--- a/index.html
+++ b/index.html
@@ -225,6 +225,44 @@
             </div>
         </section>
         <!-- Carusel Finish -->
+        <!-- Our Start -->
+        <section class="our">
+            <div class="our-inner">
+                <div class="container">
+                    <h2 class="our-title">Our Recent Projects</h2>
+                    <p class="our-text">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                    </p>
+                    <div class="row our-box">
+                    <div class="col-4">
+                        <img class="our-img-2" src="./images/recent-img-1.png"
+                            srcset="./images/recent-img-1.png 1x, ./images/recent-img-1@2x.png 2x" alt="iMG1">
+                    </div>
+                        <div class="col-4">
+                            <img class="our-img-2" src="./images/recent-img-2.png"
+                                srcset="./images/recent-img-2.png 1x, ./images/recent-img-2@2x.png 2x" alt="iMG1">
+                        </div>
+                        <div class="col-4">
+                            <img class="our-img-3" src="./images/recent-img-3.png"
+                                srcset="./images/recent-img-3.png 1x, ./images/recent-img-3@2x.png 2x" alt="iMG1">
+                        </div>
+                        <div class="col-3" style="margin-top: 33px;">
+                            <img class="our-img-4" src="./images/recent-img-4.png"
+                                srcset="./images/recent-img-4.png 1x, ./images/recent-img-4@2x.png 2x" alt="iMG1">
+                        </div>
+                        <div class="col-4" style="margin-top: 33px;">
+                            <img class="our-img-5" src="./images/recent-img-5.png"
+                                srcset="./images/recent-img-5.png 1x, ./images/recent-img-5@2x.png 2x" alt="iMG1">
+                        </div>
+                        <div class="col-5" style="margin-top: 33px;">
+                            <img class="our-img-6" src="./images/recent-img-6.png"
+                                srcset="./images/recent-img-6.png 1x, ./images/recent-img-6@2x.png 2x" alt="iMG1">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Our Finish -->
     </main>
     <!-- Site Main Finish -->
 
