--- a/index.html
+++ b/index.html
@@ -251,6 +251,33 @@
             </div>
         </section>
         <!-- Our Finish -->
+        <!-- Main Lorem -->
+        <section class="lorem">
+            <div class="container">
+                <div class="lorem-inner">
+                    <div class="lorem-img-box">
+                        <img src="./images/article-top-bg.svg" width="651" height="488" alt="Article">
+                    </div>
+                    <div class="lorem-box">
+                        <h2 class="lorem-title">
+                            Lorem Ipsum is simply dummy <br>
+                            text dummy text
+                        </h2>
+                        <p class="lorem-text">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+                            been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
+                            galley of type and scrambled it to make a type specimen book. It has survived not only five
+                            centuries,
+                        </p>
+                        <p class="lorem-title-text">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                        </p>
+                        <a href="#" class="lorem-btn">Read more</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Main Lorem -->
     </main>
     <!-- Site Main Finish -->
 
