--- a/index.html
+++ b/index.html
@@ -278,6 +278,33 @@
             </div>
         </section>
         <!-- Main Lorem -->
+        <!-- Article -->
+        <article class="article">
+            <div class="article-inner">
+                <div class="container">
+                    <div class="article-top">
+                        <h2>Lorem Ipsum</h2>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+                    </div>
+                    <div class="article-main">
+                        <div class="article-left">
+                            <h3 class="article-title">Stay in the loop</h3>
+                            <p class="article-text">Subscribe to receive the latest news and updates about TDA.
+                                We promise not to spam you!</p>
+                        </div>
+                        <div class="article-right">
+                            <form action="https://echo.htmlacademy.ru/courses" autocomplete="off" method="post"
+                                class="article-form">
+                                <input type="text" class="article-input" placeholder="Enter email address"
+                                    aria-label="Enter Your Email Address">
+                                    <button type="submit" class="article-btn">Continue</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </article>
+        <!-- Article -->
     </main>
     <!-- Site Main Finish -->
 
