--- a/index.html
+++ b/index.html
@@ -295,9 +295,9 @@
                         <div class="article-right">
                             <form action="https://echo.htmlacademy.ru/courses" autocomplete="off" method="post"
                                 class="article-form">
-                                <input type="text" class="article-input" placeholder="Enter email address"
+                                <input type="text" name="user_email:" class="article-input" placeholder="Enter email address"
                                     aria-label="Enter Your Email Address">
-                                    <button type="submit" class="article-btn">Continue</button>
+                                <button type="submit" class="article-btn">Continue</button>
                             </form>
                         </div>
                     </div>
@@ -308,23 +308,74 @@
     </main>
     <!-- Site Main Finish -->
 
-    <!-- Site Footer Start -->
-    <!--  <footer class="footer">
-            <div class="container">
-                <div class="footer__wrapper">
-                    <a href="./index.html" class="footer__logo">
-                        <img src="./images/" alt="Footer Logo">
-                    </a>
-                    <nav class="footer-nav">
-                        <ul class="footer-nav__list">
-                            <li class="footer-nav__item">
-                                <a href="./index.html">Home</a>
+    <footer class="site-footer">
+        <div class="site-footer__wrapper bg-black text-white d-none d-lg-block">
+            <div class="site-footer__container">
+                <div class="footer__wrapper pb-4 justify-content-between d-flex w-100">
+                    <div class="footer__first">
+                        <a class="footer__logo navbar-brand text-white fw-bold d-block fs-4" href="#">LOGO</a>
+                        <p class="fw-normal fs-6 mb-4">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                        </p>
+                        <a class="text-white text-decoration-none fs-6 fw-normal" href="https://www.company.com/"
+                            target="blank">@Company.com</a>
+                    </div>
+
+                    <div class="site-footer__second">
+                        <span class="mb-3 d-inline-block">About us</span>
+                        <ul class="list-unstyled m-0">
+                            <li class="footer__item">
+                                Company
+                            </li>
+                            <li class="footer__item">
+                                Portfolio
+                            </li>
+                            <li class="footer__item">
+                                Careers
+                            </li>
+                            <li>
+                                Contact us
                             </li>
                         </ul>
-                    </nav>
+                    </div>
+
+                    <div class="footer__third">
+                        <span class="mb-3 d-inline-block">Contact us</span>
+                        <p class="fw-normal fs-6">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                        </p>
+                        <a class="text-decoration-none text-white fs-6 fw-normal" href="tel:+90000000000">+9000 0000
+                            000</a>
+                    </div>
+
+                    <span class="d-flex align-items-end">
+                        <a href="https://www.facebook.com/" target="blank">
+                            <img src="./images/facebook.svg" width="55" height="55" alt="Social icons">
+                        </a>
+
+                        <a href="https://www.instagram.com/" target="blank">
+                            <img src="./images/instagram.svg" width="55" height="55" alt="Social icons">
+                        </a>
+
+                        <a href="https://twitter.com/?lang=ru" target="blank">
+                            <img src="./images/twitter.svg" width="55" height="55" alt="Social icons">
+                        </a>
+
+                        <a href="https://ru.linkedin.com/" target="blank">
+                            <img src="./images/linkedin.svg" width="55" height="55" alt="Social icons">
+                        </a>
+                    </span>
                 </div>
             </div>
-        </footer> -->
+            <hr>
+            <div class="py-3">
+                <p class="text-center text-white">Copyright ® 2021 Company All rights Rcerved</p>
+            </div>
+        </div>
+        <div class="bg-dark py-2 pt-4 d-lg-none">
+            <p class="text-center text-white">Copyright ® 2021 Company All rights Rcerved</p>
+        </div>
+    </footer>
     <!-- Site Footer Finish -->
 
     <!-- Site Script Sourse -->
