--- a/index.html
+++ b/index.html
@@ -308,6 +308,7 @@
     </main>
     <!-- Site Main Finish -->
 
+    <!-- Site Footer -->
     <footer class="site-footer">
         <div class="site-footer__wrapper bg-black text-white d-none d-lg-block">
             <div class="site-footer__container">
@@ -325,16 +326,16 @@
                         <span class="mb-3 d-inline-block">About us</span>
                         <ul class="list-unstyled m-0">
                             <li class="footer__item">
-                                Company
+                                <a class="text-decoration-none text-white" href="#">Company</a>
                             </li>
                             <li class="footer__item">
-                                Portfolio
+                                <a class="text-decoration-none text-white" href="#">Portfolio</a>
                             </li>
                             <li class="footer__item">
-                                Careers
+                                <a class="text-decoration-none text-white" href="#">Careers</a>
                             </li>
                             <li>
-                                Contact us
+                                <a class="text-decoration-none text-white" href="#">Contact us</a>
                             </li>
                         </ul>
                     </div>
