Add Colors Slick

--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@
                     </div>
                 </div>
                 <div class="carusel">
-                    <div class="carusel-title-box">
-                        <h2 class="carusel-box-title">Lorem ipsum</h2>
+                    <div class="carusel-title-box-red-box">
+                        <h2 class="carusel-box-title-red-box">Lorem ipsum</h2>
                     </div>
                     <h3 class="carusel-lorem">Lorem Ipsum</h3>
                     <p class="carusel-text">Lorem Ipsum is simply dummy text of the printing and typesetting
@@ -190,8 +190,8 @@
                     </div>
                 </div>
                 <div class="carusel">
-                    <div class="carusel-title-box">
-                        <h2 class="carusel-box-title">Lorem ipsum</h2>
+                    <div class="carusel-title-box-rose">
+                        <h2 class="carusel-box-title-rose">Lorem ipsum</h2>
                     </div>
                     <h3 class="carusel-lorem">Lorem Ipsum</h3>
                     <p class="carusel-text">Lorem Ipsum is simply dummy text of the printing and typesetting
@@ -204,8 +204,8 @@
                     </div>
                 </div>
                 <div class="carusel">
-                    <div class="carusel-title-box">
-                        <h2 class="carusel-box-title">Lorem ipsum</h2>
+                    <div class="carusel-title-box-blue">
+                        <h2 class="carusel-box-title-blue">Lorem ipsum</h2>
                     </div>
                     <h3 class="carusel-lorem">Lorem Ipsum</h3>
                     <p class="carusel-text">Lorem Ipsum is simply dummy text of the printing and typesetting
